# Spam-Filter

./: .gitignore  README.md  convert_to_txt.py  get_data.py  naive_bayesModel.pkl  pyproject.toml  readme.txt  spam-filter.py  test_trained_model.py  vectorizer.pkl
