[project]
name = "Spam-Filter"
version = "0.1.0"
description = "final project machine learning creating a spam filter for e-mails"
authors = [
    {name = "FelixMahlknecht",email = "mf9512@mci4me.at"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
